# digicus

./: ARCHITECTURAL_PHILOSPHY.md  BBTR_SPEC.md  README.md  STANDARD_LIBRARY.md  TECHNICAL_ARCHITECTURE.md
block_render_engine/: Gemfile  (+7 more)
digit/lib/rust_to_dtr/: Cargo.toml  README.md
digit/lib/rust_to_dtr/example_soroban_contracts/: README.md
digit/lib/rust_to_dtr/example_soroban_contracts/digicus_unofficial_examples/answer_to_life/: lib.dtr
digit/lib/rust_to_dtr/example_soroban_contracts/digicus_unofficial_examples/answer_to_life_with_interface_trait_ignored/: lib.dtr  lib.rs
digit/lib/rust_to_dtr/example_soroban_contracts/digicus_unofficial_examples/break_statement_not_too_many_scope_jumps/: lib.dtr  lib.rs
digit/lib/rust_to_dtr/example_soroban_contracts/digicus_unofficial_examples/closure_around_answer_to_life/: lib.dtr  lib.rs
digit/lib/rust_to_dtr/example_soroban_contracts/digicus_unofficial_examples/count_zero_to_answer_to_life/: lib.dtr
digit/lib/rust_to_dtr/src/: lib.rs  main.rs  tests.rs  translate.rs
digit/lib/rust_to_dtr/src/common/: compilation_state.rs  mod.rs
digit/lib/rust_to_dtr/src/errors/: mod.rs  not_translatable_error.rs
digit/lib/rust_to_dtr/src/example_soroban_contracts/: README.md
digit/lib/rust_to_dtr/src/instruction/: mod.rs
digit/lib/rust_to_dtr/src/optimize/: and_assign_elimination.rs  constant_propagation.rs  dead_code_elimination.rs  field_to_assign_reduction.rs  mod.rs  unreachable_code_elimination.rs  unreachable_return_elimination.rs
digit/lib/rust_to_dtr/src/rust_to_dtr_c/: README.md  mod.rs
digit/lib/rust_to_dtr/src/translate/: expression.rs  mod.rs  rust_to_dtr_term.rs  type_name.rs
digit/lib/rust_to_dtr/src/translate/block/: mod.rs
temp_rust_to_dtr_serve/: Cargo.toml  vercel.json
temp_rust_to_dtr_serve/api/: compile_rust_to_dtr.rs  handler.rs  versions.rs
(+461 files in other folders)
