[package]
name = "rust_to_dtr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
soroban-sdk = "20.5"
syn = { version = "2.0", features = ["full"] }
proc-macro2 = "1.0"
rand = "0.8.5"
regex = "1.10.4"
rutie = {version="0.9.0", features=["no-link"]}


[lib]
crate-type = ["cdylib"]
