[package]
name = "rust_to_dtr"
version = "0.1.3"
authors = ["Rob Durst <me@robdurst.com>"]
edition = "2021"
description = "Convert Rust Soroban contracts to DTR format."
license = "MIT"
repository = "https://github.com/spaced-out-thoughts-dev-foundation/digicus/tree/main/digit/lib/rust_to_dtr"

[dependencies]
soroban-sdk = "20.5"
syn = { version = "2.0", features = ["full"] }
proc-macro2 = "1.0"
rand = "0.8.5"

[lib]
name = "rust_to_dtr"
crate-type = ["cdylib", "lib"]
